<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>no.cantara.processwatcher</groupId>
    <artifactId>processwatcher</artifactId>
    <packaging>jar</packaging>
    <version>0.1-SNAPSHOT</version>
    <url>https://wiki.cantara.no/</url>

    <developers>
        <developer>
            <id>oranheim</id>
            <name>Ove Ranheim</name>
            <email>oranheim@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <organization>Cantara</organization>
            <organizationUrl>
                https://wiki.cantara.no/
            </organizationUrl>
        </developer>
        <developer>
            <id>totto</id>
            <name>Thor Henning Hetland</name>
            <email>totto@totto.org</email>
            <roles>
                <role>Developer</role>
            </roles>
            <organization>Cantara</organization>
            <organizationUrl>
                https://wiki.cantara.no/
            </organizationUrl>
        </developer>
    </developers>


    <parent>
        <groupId>no.cantara.emi</groupId>
        <artifactId>parent</artifactId>
        <version>8</version>
    </parent>

    <scm>
        <developerConnection>
            scm:git:ssh://git@github.com/Cantara/ProcessWatcher.git
        </developerConnection>
        <connection>scm:git:https://github.com/Cantara/ProcessWatcher.git</connection>
        <url>https://wiki.cantara.no/</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <slf4j.version>1.7.36</slf4j.version>
        <jackson.version>2.15.2</jackson.version>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>


    <repositories>
        <!-- Needed for parent  -->
        <repository>
            <id>cantara-releases</id>
            <name>Cantara Release Repository</name>
            <url>https://mvnrepo.cantara.no/content/repositories/releases/</url>
        </repository>
        <!-- Needed for SDK snapshots  -->
        <repository>
            <id>cantara-snapshots</id>
            <name>Cantara Snapshot Repository</name>
            <url>https://mvnrepo.cantara.no/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.0.1-jre</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.32</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.7.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
        </plugins>
    </build>

</project>
